# ARC-AGI-Model

./: .gitignore  README.md  all.ipynb  all.py  clean_arc_data.py  copy_and_append_predictions.py  guess_groups.json  infer_and_metrics.py  predict_and_viz.py  pyproject.toml  real_groups.json  requirements.txt  show_grids.py  visualize_groups.py
.ipynb_checkpoints/: all-checkpoint.py  trelis-ttt-checkpoint.ipynb
Brandi-GPT-II/: .gitignore  LICENSE  pyproject.toml
Brandi-GPT-II/chapter_2/: chapter02.py  creating_token_embeddings.ipynb  simple_tokenizer.ipynb  token_encoding_embeddings.ipynb
Brandi-GPT-II/chapter_2/.ipynb_checkpoints/: creating_token_embeddings-checkpoint.ipynb  simple_tokenizer-checkpoint.ipynb  token_encoding_embeddings-checkpoint.ipynb
Brandi-GPT-II/chapter_3/: chapter03.py
Brandi-GPT-II/chapter_3/.ipynb_checkpoints/: attention_mechanism-checkpoint.ipynb
Brandi-GPT-II/chapter_4/: gpt_architecture.ipynb
Brandi-GPT-II/chapter_4/.ipynb_checkpoints/: chapter04-checkpoint.py  gpt_architecture-checkpoint.ipynb
Brandi-GPT-II/chapter_5/: pretraining.ipynb
Brandi-GPT-II/chapter_5/.ipynb_checkpoints/: chapter05-checkpoint.py  pretraining-checkpoint.ipynb
Brandi-GPT-II/chapter_6/: finetuning_classification.ipynb
Brandi-GPT-II/chapter_6/.ipynb_checkpoints/: finetuning_classification-checkpoint.ipynb
Brandi-GPT-II/chapter_7/: finetuning_following_instructions.ipynb  instruction-data-with-response.json
Curve-BallDatasetTasks/: example01.json  example02.json  example03.json  example04.json  example05.json  example06.json  example07.json  (+4 more)
(+84 files in other folders)
