[project]
name = "arc-agi-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.40.71",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "notebook>=7.4.7",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "sagemaker>=2.254.1",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
