[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "tiktoken>=0.7.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
